<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    android:orientation="vertical"
    android:background="@android:color/black">

    <Button
        android:id="@+id/game_settings_button"
        android:text="@string/go_game_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="151dp"
        style="@android:style/Widget.Holo.Button"
        android:elevation="24dp"
        android:textStyle="normal|bold|italic"
        android:fontFamily="sans-serif-condensed"
        android:typeface="sans"
        android:textSize="36sp"
        android:lineSpacingExtra="12sp"
        android:textColor="@android:color/white"
        android:background="@android:color/black"
        android:layout_weight="0.13"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/customization_button"
        android:text="@string/go_customization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.19"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:textStyle="normal|bold|italic"
        android:textSize="30sp"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/sound_button"
        android:text="@string/go_sound_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.22"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@android:color/white"
        android:background="@android:color/black"
        android:textSize="30sp"
        android:textStyle="normal|bold|italic"
        />

    <Button
        android:text="@string/return_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:layout_weight="0.22"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@android:color/white"
        android:background="@android:color/black"
        android:textSize="30sp"
        android:textStyle="normal|bold|italic"
        android:onClick="returnToMain"/>

</LinearLayout>