<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    android:orientation="vertical"
    android:background="@android:color/black">


    <Button
        android:text="@string/play_computer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="151dp"
        android:id="@+id/button"
        style="@android:style/Widget.Holo.Button"
        android:elevation="24dp"
        android:textStyle="normal|bold|italic"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:fontFamily="sans-serif-condensed"
        android:typeface="sans"
        android:textSize="36sp"
        android:lineSpacingExtra="12sp"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/black"
        android:background="@android:color/black"
        android:layout_weight="0.13"
        android:textAllCaps="false" />

    <Button
        android:text="@string/play_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:layout_weight="0.19"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:textStyle="normal|bold|italic"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:onClick="goToPlayFriend"/>

    <Button
        android:text="@string/go_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:layout_weight="0.22"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@android:color/white"
        android:background="@android:color/black"
        android:textSize="30sp"
        android:textStyle="normal|bold|italic"
        android:onClick="testClick"/>


</LinearLayout>